# AetherJackal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: app.py  config.py  pyproject.toml  requirements.txt  serverless.yml
backend/models/: migration.py  resource.py
backend/routes/: analytics.py  health.py  migrations.py  resources.py
backend/services/: analytics_service.py  migration_service.py  resource_service.py
backend/tests/: conftest.py  test_health.py  test_migrations.py  test_resources.py
ci-cd/: Jenkinsfile
docker/: Dockerfile  Dockerfile.dev
frontend/: .eslintrc.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CostEstimator.jsx  Dashboard.jsx  MigrationList.jsx  ResourceInventory.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css
scripts/: migrate.sh
